--- a/service/static/index.html
+++ b/service/static/index.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="static/css/blue_bootstrap.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"
-            integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src = "static/js/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="static/js/rest_api.js"></script>
 </head>
 <body>
@@ -45,9 +44,9 @@
 
             <div class="form-horizontal">
                 <div class="form-group">
-                    <label class="control-label col-sm-2" for="order_name">Name:</label>
+                    <label class="control-label col-sm-2" for="name">Name:</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="order_name" placeholder="Enter name">
+                        <input type="text" class="form-control" id="name" placeholder="Enter name">
                     </div>
                 </div>
                 <div class="form-group">
