--- a/service/static/index.html
+++ b/service/static/index.html
@@ -74,7 +74,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="control-label col-sm-2" for="order_status">Order Status:</label>
+                    <label class="control-label col-sm-2" for="order_status">Status:</label>
                     <div class="col-sm-10">
                         <select class="form-control" id="order_status">
                             <option value="received" selected>RECEIVED</option>
